# OpenGL_Journey

./: CMakeLists.txt  README.md  fileTree.txt
src/: Camera.cpp  Light.cpp  Mesh.cpp  Shader.cpp  Texture.cpp  Window.cpp  main.cpp
src/include/: Camera.h  Light.h  Mesh.h  Shader.h  Texture.h  Window.h
src/shaders/: shader.frag  shader.vert
